@@ -2,8 +2,7 @@
 <Scene Version="1" Name="Scene">
     <Node Class="PLScene::SNKeyValue" Key="ClearColor" Value="0.5 0.5 0.5" />
     <Node Class="PLScene::SNCamera" Name="FreeCamera" Rotation="0.0 180.0 0.0">
-        <Modifier Class="PLEngine::SNMLookController" />
-        <Modifier Class="PLScene::SNMRotationFixRoll" />
+        <Modifier Class="PLEngine::SNMEgoLookController" />
         <Modifier Class="PLEngine::SNMMoveController" />
     </Node>
     <Node Class="PLScene::SNMesh" Position="0 -2.1 -5" Scale="4 0.1 4" Rotation="0 180 0" Name="Floor" Mesh="Default" />
